--- a/JavaScript/LocalStorage/LSApp/static/css/style.css
+++ b/JavaScript/LocalStorage/LSApp/static/css/style.css
@@ -3,6 +3,92 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+header{
+    border: 5px solid #636363;
+    background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
+}
+footer{
+    border: 5px solid #636363;
+    background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
+}
+body, html { 
+    width: 100%;
+    height: 100%;
+}
+.foot{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+}
+.content{
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
     background: linear-gradient(158deg, #636363 6%, #E2E2E2 35%, #C1C1C1 60%, #636363 86%, #fff 100%);
+}
+.code{
+    background: linear-gradient(90deg, #636363 16%, #969696 100%);
+    border: 5px solid #636363;
+    border-radius: 10px;
+    width: 50%;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.emailto{
+    text-decoration: none;
+    color: white
+}
+.head{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+}
+.abstract{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+p{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+}
+.block{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+h2{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: xx-large;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.main-text{
+    padding-top: 10px;
+    font-size: xxx-large;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.code:hover{
+    background: linear-gradient(90deg, #797979 16%, #ababab 100%);
+    border: 5px solid #797979;
+    cursor: pointer;
+}
+.copied{
+    position: fixed;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: #636363;
+    border: 3px solid black;
+    left: -100%;
+    border-radius: 10px;
+    color: white;
+    width: 25%;
+    /* left: -3%; */
+    transition-duration: 0.5s;
+    text-align: right;
+    padding: 5px;
+}
+.code:active{
+    background: linear-gradient(90deg, #a9a9a9 16%, #d5d5d5 100%);
+    border: 5px solid #b1b1b1;
+    color: black;
 }
