--- a/JavaScript/LocalStorage/LSApp/static/css/style.css
+++ b/JavaScript/LocalStorage/LSApp/static/css/style.css
@@ -32,12 +32,14 @@ body, html {
     border-radius: 10px;
     width: 50%;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
     padding-top: 5px;
+    transition-duration: 0.25s;
     padding-bottom: 5px;
 }
 .emailto{
     text-decoration: none;
-    color: white
+    color: white;
 }
 .head{
     text-align: center;
@@ -75,14 +77,13 @@ h2{
 }
 .copied{
     position: fixed;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #636363;
-    border: 3px solid black;
+    border: 3px solid rgb(86, 86, 86);
     left: -100%;
     border-radius: 10px;
     color: white;
     width: 25%;
-    /* left: -3%; */
     transition-duration: 0.5s;
     text-align: right;
     padding: 5px;
@@ -91,4 +92,35 @@ h2{
     background: linear-gradient(90deg, #a9a9a9 16%, #d5d5d5 100%);
     border: 5px solid #b1b1b1;
     color: black;
+}
+.dis{
+    background-color: #bebebe;
+    border: 5px solid #bebebe;
+    height: 8%;
+    border-radius: 5px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    width: 13em;
+    display: flex;
+    align-items: center;
+    top: 90%;
+}
+.dis-text{
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: xxx-large;
+    position: absolute;
+    background-color: #636363;
+    border: 5px solid #636363;
+    border-radius: 5px;
+    transition-duration: 0.5s;
+    left: 0%;
+}
+.dis-text:hover{
+    text-decoration: underline;
+    left: 20%;
+    color: black;
+    background-color: #888;
 }
