--- a/JavaScript/LocalStorage/Discussions/static/css/discussion.css
+++ b/JavaScript/LocalStorage/Discussions/static/css/discussion.css
@@ -1,44 +1,66 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-header{
+
+header {
     border: 5px solid #636363;
     background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
 }
-footer{
+
+footer {
     border: 5px solid #636363;
     background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
 }
-body, html { 
+
+body,
+html {
     width: 100%;
     height: 100%;
 }
-.content{
+
+.content {
     min-width: 100%;
     min-height: 100%;
     position: relative;
     background: linear-gradient(158deg, #636363 6%, #E2E2E2 35%, #C1C1C1 60%, #636363 86%, #fff 100%);
 }
-.main-text{
+
+.main-text {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     letter-spacing: 1rem;
 }
-.warning{
+
+.warning {
     color: red;
-    font-size: large;
+    font-size: xx-large;
     text-align: center;
+    text-shadow: 0px 0px 5px red;
 }
-.warning-more{
+
+.warning-more {
     color: red;
+    font-size: x-large;
     text-align: center;
+    text-shadow: 0px 0px 5px red;
 }
-.foot{
+
+footer {
+    height: 7%;
     display: flex;
+    align-items: center;
 }
-.back{
+
+.foot {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    /* justify-content: center; */
+}
+
+.back {
     background-color: #bebebe;
     border: 5px solid #bebebe;
     border-radius: 5px;
@@ -46,22 +68,46 @@ body, html {
     display: flex;
     align-items: center;
 }
-.back-button{
+
+.back-button {
     text-decoration: none;
     color: white;
+    height: 100%;
     text-align: center;
     position: absolute;
     background-color: #636363;
     border: 2px solid #636363;
     border-radius: 5px;
     transition-duration: 0.5s;
+    vertical-align: middle;
 }
-.back-button:hover{
+
+.back-button:hover {
     text-decoration: underline;
     color: black;
+    height: 200%;
+    margin: 0 auto;
     background-color: #888;
 }
-.topic{
+
+.topic {
     padding-left: 10px;
     color: #636363;
+}
+
+#all {
+    font-size: xx-large;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #E2E2E2;
+    padding: 5px;
+    margin-bottom: 5px;
+    /* background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+}
+
+.post {
+    font-size: xx-large;
+    overflow-wrap: break-word;
+    color: black;
 }
