--- a/JavaScript/LocalStorage/LSApp/static/css/style.css
+++ b/JavaScript/LocalStorage/LSApp/static/css/style.css
@@ -1,32 +1,39 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-header{
+
+header {
     border: 5px solid #636363;
     background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
 }
-footer{
+
+footer {
     border: 5px solid #636363;
     background: linear-gradient(60deg, #E2E2E2 15%, #636363 50%, #fff 100%);
 }
-body, html { 
+
+body,
+html {
     width: 100%;
     height: 100%;
 }
-.foot{
+
+.foot {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
 }
-.content{
+
+.content {
     min-width: 100%;
     min-height: 100%;
     position: relative;
     background: linear-gradient(158deg, #636363 6%, #E2E2E2 35%, #C1C1C1 60%, #636363 86%, #fff 100%);
 }
-.code{
+
+.code {
     background: linear-gradient(90deg, #636363 16%, #969696 100%);
     border: 5px solid #636363;
     border-radius: 10px;
@@ -37,47 +44,64 @@ body, html {
     transition-duration: 0.25s;
     padding-bottom: 5px;
 }
-.emailto{
+
+.emailto {
     text-decoration: none;
     color: white;
+    transition-duration: 0.25s;
 }
-.head{
+
+.emailto:hover {
+    text-shadow: 0px 0px 5px white;
+}
+
+
+.head {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
 }
-.abstract{
+
+.abstract {
     padding-top: 5px;
     padding-bottom: 5px;
 }
-p{
+
+p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: large;
 }
-.block{
+
+.block {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
-h2{
+
+h2 {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: xx-large;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.main-text{
+
+.main-text {
     padding-top: 10px;
     font-size: xxx-large;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.code:hover{
+
+.code:hover {
     background: linear-gradient(90deg, #797979 16%, #ababab 100%);
     border: 5px solid #797979;
     cursor: pointer;
+    text-shadow: 0px 0px 5px #acacac;
+    box-shadow: 0px 0px 5px 5px #969696;
 }
-.copied{
+
+.copied {
     position: fixed;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #636363;
     border: 3px solid rgb(86, 86, 86);
     left: -100%;
@@ -88,12 +112,16 @@ h2{
     text-align: right;
     padding: 5px;
 }
-.code:active{
+
+.code:active {
     background: linear-gradient(90deg, #a9a9a9 16%, #d5d5d5 100%);
     border: 5px solid #b1b1b1;
     color: black;
+    box-shadow: 0px 0px 5px 10px #bfbfbf;
+    text-shadow: 0px 0px 5px #797979;
 }
-.dis{
+
+.dis {
     background-color: #bebebe;
     border: 5px solid #bebebe;
     height: 8%;
@@ -106,7 +134,8 @@ h2{
     align-items: center;
     top: 90%;
 }
-.dis-text{
+
+.dis-text {
     text-decoration: none;
     color: white;
     text-align: center;
@@ -118,9 +147,12 @@ h2{
     transition-duration: 0.5s;
     left: 0%;
 }
-.dis-text:hover{
+
+.dis-text:hover {
     text-decoration: underline;
     left: 20%;
     color: black;
+    text-shadow: 0px 0px 5px #acacac;
+    box-shadow: 0px 0px 5px 5px #969696;
     background-color: #888;
 }
