--- a/JavaScript/LocalStorage/LSApp/static/css/style.css
+++ b/JavaScript/LocalStorage/LSApp/static/css/style.css
@@ -137,15 +137,25 @@ h2 {
 
 .dis-text {
     text-decoration: none;
+    /* Этот текст является ссылкой и это строка удаляет нижнюю линию (вспомни как перекреслюешь граматичное основи, так вот, я их удаляю) */
     color: white;
+    /* Просто делаю текст белым */
     text-align: center;
+    /* Расположу текст по центру */
     font-size: xxx-large;
+    /* Увеличивает размер текста */
     position: absolute;
+    /* Делаю позицию текста абсолютным (просто даю возможность тексту двигаться с помощью left, right, top, bottom) */
     background-color: #636363;
+    /* Делаю серый задний фон */
     border: 5px solid #636363;
+    /* Делаю серый обводки */
     border-radius: 5px;
+    /* Делаю радиус обводок (Плавность обводок) */
     transition-duration: 0.5s;
+    /* Длительность анимации */
     left: 0%;
+    /* Левая сторона обьекта: 0% */
 }
 
 .dis-text:hover {
